try to fix build issues with pbr.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-version = 2014.1
+version = 2015.1
 name = keystone-voms
-summary = Keystone VOMS module for Keystone (Icehouse).
+summary = Keystone VOMS module for Keystone (Kilo).
 description-file =
     README.md
 author = Spanish National Research Council (CSIC)
